Fix vertical align of fold button in Firefox

--- a/src/ol-layerswitcher.css
+++ b/src/ol-layerswitcher.css
@@ -99,6 +99,7 @@
 
 .layer-switcher .group button {
     display: inline-block;
+    vertical-align: top;
     float: none;
     width: 16px;
     height: 16px;
